Finalização do projeto de Media Enem

--- a/mediaenem/index.html
+++ b/mediaenem/index.html
@@ -15,23 +15,23 @@
             <div id="cal">
                 <label for="mat">
                     Matemática
-                    <input type="number" class="inpute" id="mat" min="0" max="1000">
+                    <input type="number" class="inpute" id="mat" >
                 </label>
                 <label for="huma">
                     Humanas
-                    <input type="number" class="inpute" id="huma" max="1000">
+                    <input type="number" class="inpute" id="huma" >
                 </label>
                 <label for="ling">
                     Linguagens
-                    <input type="number" class="inpute" id="ling" max="1000">
+                    <input type="number" class="inpute" id="ling" >
                 </label>
                 <label for="natu">
                     Natureza
-                    <input type="number" class="inpute" id="natu" max="1000">
+                    <input type="number" class="inpute" id="natu">
                 </label>
                 <label for="reda">
                     Redação
-                    <input type="number" class="inpute" id="reda" max="100">
+                    <input type="number" class="inpute" id="reda">
                 </label>
                 <button onclick="calcular()">Calcular</button>
             </div>
