--- a/reviews/index.html
+++ b/reviews/index.html
@@ -10,21 +10,26 @@
 
     <main>
         <section class="container">
+
+
             <!-- title -->
             <div class="title">
                 <h2>Our Reviews</h2>
                 <div class="underline"></div>
             </div>
+
+
             <!-- review -->
              <article class="review">
                 <div class="img-container">
-                    <img src="" id="person-img" alt="">
+                    <img src="imgs/person-1.jpeg    " id="person-img" alt="">
                 </div>
                 <h4 id="author">sara jones</h4>
                 <p id="job">ux design</p>
                 <p id="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate modi perspiciatis, sint illo atque nobis incidunt aut nostrum ex, suscipit velit! Necessitatibus, eligendi ab sapiente vero suscipit ut similique dolorum!
-
                 </p>
+
+
                 <!-- prev next buttons -->
                  <div class="button-container">
                     <button class="prev-btn">
@@ -34,9 +39,11 @@
                         <i class="fas fa-chevron-right"></i>
                     </button>    
                 </div>
+
                 <!-- random button -->
                  <button class="random-btn">surprise me</button>
              </article>
+             
         </section>
     </main>
 
