--- a/todolist/index.html
+++ b/todolist/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="style.css">
     <title>To do List</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=delete" />
@@ -18,7 +18,9 @@
             <input type="text" id="text" placeholder="What you gonna do today? " onkeydown="verificarTecla(event)">
 
             <button onclick="adicionar()" id="button" >+</button>
+
         </div>
+        <button onclick="colorMode()" id="color"> </button>
         <div class="list"></div>
         
     </div>
