--- a/todolist/index.html
+++ b/todolist/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css">
     <title>To do List</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=delete" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=dark_mode" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=light_mode" />
 
 </head>
 <body>
@@ -20,7 +22,9 @@
             <button onclick="adicionar()" id="button" >+</button>
 
         </div>
-        <button onclick="colorMode()" id="color"> </button>
+        <button onclick="colorMode()" id="color"> 
+            
+        </button>
         <div class="list"></div>
         
     </div>
