--- a/YoutubeVideo/index.html
+++ b/YoutubeVideo/index.html
@@ -90,7 +90,7 @@
                     <button class="save btn"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFFFFF"><path d="M200-120v-640q0-33 23.5-56.5T280-840h400q33 0 56.5 23.5T760-760v640L480-240 200-120Zm80-122 200-86 200 86v-518H280v518Zm0-518h400-400Z"/></svg> Salvar</button>
                 </div>
                 <div class="more-btn-box btn-box">
-                    <input type="button" class="more btn" value="...">
+                    <button class="more btn"></button>
                 </div>
             </div>
 
