--- a/YoutubeVideo/index.html
+++ b/YoutubeVideo/index.html
@@ -8,12 +8,12 @@
     
     
 </head>
-<body>
+<body onload="carregar()">
     <header>
 
         <div class="left-container">
 
-            <div id="menu-btn">
+            <div id="menu-btn" onclick="showBar()">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFFFFF"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
             </div>
             <div class="logo-img">
@@ -96,6 +96,14 @@
 
         </div>
     </main>
-    <section></section>
+    <section id="sec"></section>
+
+    <aside id="sideBar">
+        <div id="menu-btn" onclick="hideBar()">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFFFFF"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
+        </div>
+    </aside>
+
+    <script src="script.js" defer></script>
 </body>
 </html>
