--- a/YoutubeVideo/index.html
+++ b/YoutubeVideo/index.html
@@ -9,6 +9,7 @@
     
 </head>
 <body onload="carregar()">
+    <div id="screenCover" onclick="hideBar()"></div>
     <header>
 
         <div class="left-container">
